--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "npm-run-all": "^4.1.3"
   },
   "scripts": {
-    "start": "run-p node murphy",
+    "start": "run-p open server murphy ",
     "murphy": "murphy",
-    "node": "node js/node.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "node app/server.js",
+    "open": "open http://localhost:8000"
   },
   "devDependencies": {
     "eslint": "^5.6.1"
